RESOLVED FIXED115287
~BlockAllocator should ASSERT that it has no more Regions left
https://bugs.webkit.org/show_bug.cgi?id=115287
Summary ~BlockAllocator should ASSERT that it has no more Regions left
Mark Hahnenberg
Reported 2013-04-26 16:19:42 PDT
Title says it all.
Attachments
Patch (2.42 KB, patch)
2013-04-26 17:23 PDT, Mark Hahnenberg
kling: review+
Mark Hahnenberg
Comment 1 2013-04-26 17:23:09 PDT
Andreas Kling
Comment 2 2013-04-27 09:52:51 PDT
Comment on attachment 199879 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=199879&action=review r=me > Source/JavaScriptCore/heap/BlockAllocator.cpp:61 > + ASSERT(allRegionSetsAreEmpty() && m_emptyRegions.isEmpty()); You could make this two separate ASSERTs so it's easy to see which one is failing. > Source/JavaScriptCore/heap/BlockAllocator.h:75 > + bool isEmpty() I'd make this const. > Source/JavaScriptCore/heap/BlockAllocator.h:88 > + bool allRegionSetsAreEmpty(); Ditto.
Mark Hahnenberg
Comment 3 2013-04-29 12:51:19 PDT
Note You need to log in before you can comment on or make changes to this bug.