~BlockAllocator should ASSERT that it has no more Regions left https://bugs.webkit.org/show_bug.cgi?id=115287

Reviewed by Andreas Kling.

* heap/BlockAllocator.cpp:
(JSC::BlockAllocator::~BlockAllocator):
(JSC::BlockAllocator::allRegionSetsAreEmpty):
* heap/BlockAllocator.h:
(RegionSet):
(JSC::BlockAllocator::RegionSet::isEmpty):
(BlockAllocator):


Canonical link: https://commits.webkit.org/133792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149305 268f45cc-cd09-0410-ab3c-d52691b4dbfc